# qt6-base-os2

./: .QT-ENTERPRISE-LICENSE-AGREEMENT  .cmake.conf  .gitignore  .qmake.conf  .release-timestamp  .tag  REUSE.toml  configure  configure.bat  configure.cmake  licenseRule.json  qt_cmdline.cmake  sync.profile  t
LICENSES/: HPND.txt  X11.txt
cmake/: Qt3rdPartyLibraryHelpers.cmake  QtAppHelpers.cmake  QtAutoDetectHelpers.cmake  QtBaseGlobalTargets.cmake  QtBuild.cmake  QtBuildHelpers.cmake  QtBuildPathsHelpers.cmake  QtBuildRepoHelpers.cmake  QtBuildStaticDocToolsScript.cmake  QtCompilerFlags.cmake  QtConfig.cmake.in  QtDocsHelpers.cmake  QtExecutableHelpers.cmake  QtFeature.cmake  QtFlagHandlingHelpers.cmake  QtInstallPaths.cmake.in  QtInternalTargets.cmake  QtMkspecHelpers.cmake  QtModuleHelpers.cmake  QtPkgConfigHelpers.cmake  QtPlatformAndroid.cmake  QtPluginHelpers.cmake  QtPostProcessHelpers.cmake  QtPublicAppleHelpers.cmake  QtPublicSbomAttributionHelpers.cmake  QtPublicSbomDepHelpers.cmake  QtPublicSbomFileHelpers.cmake  QtPublicSbomGenerationHelpers.cmake  QtPublicSbomHelpers.cmake  QtPublicSbomOpsHelpers.cmake  QtPublicSbomPurlHelpers.cmake  QtPublicSbomSystemDepHelpers.cmake  QtPublicTestHelpers.cmake  QtPublicWalkLibsHelpers.cmake  QtSbomHelpers.cmake  QtScopeFinalizerHelpers.cmake  QtSeparateDebugInfo.cmake  QtTargetHelpers.cmake  QtTestHelpers.cmake  QtToolHelpers.cmake  (+2 more)
coin/: module_config.yaml
coin/instructions/: cmake_module_build_instructions.yaml  cmake_qtbase_build_instructions.yaml  coin_build_doc_tools.yaml  coin_build_doc_tools_checked.yaml  coin_fetch_doc_tools.yaml  coin_module_build_template_v2.yaml  coin_module_test_docs.yaml  coin_qtbase_build_template_v2.yaml  coin_qtbase_test_docs.yaml  coin_test_docs_common.yaml  prepare_license_test.yaml  prepare_source_sbom_check.yaml  run_license_check.yaml
config.tests/cxa_thread_atexit/: CMakeLists.txt  main.c
doc/global/: compat.qdocconf  config.qdocconf  htmltabs.qdocconf  macros.qdocconf  qt-html-templates-offline.qdocconf
include/QtConcurrent/: qtconcurrentversion.h
include/QtCore/: headers.pri  q20algorithm.h  q20functional.h  q20iterator.h  q23functional.h  qapplicationstatic.h  qcompare_impl.h  qforeach.h  qjnitypes.h  qstringconverter_base.h  qstringfwd.h  qt_os2.h  qtconfigmacros.h  qtcoreversion.h  qvarianthash.h  qvariantlist.h  qvariantmap.h  qxpfunctional.h
include/QtDBus/: qdbusmacros.h  qtdbusversion.h
include/QtDeviceDiscoverySupport/: qtdevicediscoverysupportversion.h
include/QtEglFSDeviceIntegration/: qteglfsdeviceintegrationversion.h
include/QtEglFsKmsGbmSupport/: qteglfskmsgbmsupportversion.h
include/QtEglFsKmsSupport/: qteglfskmssupportversion.h
include/QtFbSupport/: qtfbsupportversion.h
include/QtFreetype/: ft2build.h  headers.pri
include/QtGui/: headers.pri  qaccessible_base.h  qtguiversion.h
include/QtHarfbuzz/: headers.pri
include/QtInputSupport/: qtinputsupportversion.h
include/QtJpeg/: headers.pri  jchuff.h  jconfig.h  jconfigint.h  jdcoefct.h  jdct.h  jdhuff.h  jdmainct.h  jdmaster.h  jdmerge.h  jdsample.h  jerror.h  jinclude.h  jmemsys.h  jmorecfg.h  jpeg_nbits_table.h  jpegcomp.h  jpegint.h  jpeglib.h  jsimd.h  jsimddct.h  jversion.h
include/QtKmsSupport/: qtkmssupportversion.h
include/QtMockPlugins1/: qtmockplugins1version.h
include/QtMockPlugins2/: qtmockplugins2version.h
include/QtMockPlugins3/: qtmockplugins3version.h
include/QtMockStaticResources1/: qtmockstaticresources1version.h
include/QtNetwork/: headers.pri  qsslserver.h  qtnetworkversion.h
include/QtOpenGL/: qtopenglversion.h
include/QtOpenGLWidgets/: qtopenglwidgetsversion.h
include/QtPng/: headers.pri  png.h  pngconf.h  pngdebug.h  pnginfo.h  pnglibconf.h  pngpriv.h  pngstruct.h
include/QtPrintSupport/: qtprintsupportversion.h
include/QtSql/: qtsqlversion.h
include/QtTest/: qttestversion.h
include/QtTestAutogeneratingCppExports/: QtTestAutogeneratingCppExports  QtTestAutogeneratingCppExportsVersion  headers.pri  module_api.h  qttestautogeneratingcppexportsversion.h
include/QtTestAutogeneratingCppExportsCustomName/: QtTestAutogeneratingCppExportsCustomName  QtTestAutogeneratingCppExportsCustomNameVersion  headers.pri  module_api.h  qttestautogeneratingcppexportscustomnameversion.h
include/QtWidgets/: qtwidgetsversion.h
include/QtXml/: qtxmlversion.h
libexec/: qt-internal-configure-tests.bat.in
mkspecs/common/: gcc-base.conf
mkspecs/features/: ctest_testcase_common.prf  default_post.prf  qml_plugin.prf  qt.prf  qt_configure.prf  qt_functions.prf  qt_helper_lib.prf  qt_module.prf  resolve_target.prf  testcase.prf
mkspecs/os2-g++/: qmake.conf
qmake/: main.cpp  option.cpp
qmake/generators/: makefile.cpp
src/: CMakeLists.txt
src/android/: REUSE.toml
src/concurrent/: qtconcurrentiteratekernel.cpp  qtconcurrentmap.h  qtconcurrentreducekernel.h
src/corelib/: CMakeLists.txt  Qt6AndroidMacros.cmake  Qt6CTestMacros.cmake  Qt6CoreConfigExtras.cmake.in  Qt6CoreDeploySupport.cmake  Qt6CoreMacros.cmake  configure.cmake
src/dbus/: qdbusargument.cpp  qdbusconnection.cpp  qdbusconnectionmanager.cpp  qdbuserror.cpp  qdbusextratypes.cpp  qdbusintegrator.cpp  qdbusmessage.cpp  qdbuspendingcall.cpp  qdbusunixfiledescriptor.cpp  qdbusutil.cpp  qt_attribution.json
src/gui/: CMakeLists.txt
src/network/: CMakeLists.txt
src/opengl/: qopenglbuffer.cpp  qopenglcompositor.cpp  qopenglcompositorbackingstore.cpp  qopengldebug.cpp  qopenglpixeltransferoptions.cpp  qopengltexture.cpp
src/plugins/: REUSE.toml
src/printsupport/: CMakeLists.txt  REUSE.toml
src/testlib/: qtest.h  (+13 more)
tests/auto/cmake/test_add_resource_prefix/: CMakeLists.txt  main.cpp
tests/auto/corelib/io/qprocess/testSoftExit/: CMakeLists.txt
tests/auto/corelib/kernel/qcoreapplication/: CMakeLists.txt  apphelper.cpp  maybeshow.h  tst_qcoreapplication.cpp  tst_qcoreapplication.h  tst_static_qcoreapplication.cpp
tests/auto/corelib/tools/qlist/: CMakeLists.txt  tst_qlist.cpp
tests/auto/widgets/kernel/qapplication/: CMakeLists.txt  tst_qapplication.cpp
util/: update_public_suffix_list.sh
(+1050 files in other folders)
